// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PipelineStatusDetailPage> Completed job, no warn, no error 1`] = `
"<PipelineStatusDetailPage fetchPipelineStatusDetail={[Function: fetch]} rowId={1} interval={2000}>
  <Page title="Status Detail" hasHeader={true} notFound={false}>
    <div className="app-page">
      <PageHeader title="assays - Workflow_Assay01">
        <div className="page-header">
          <h2 className="no-margin-top">
            assays - Workflow_Assay01
          </h2>
          <Notifications>
            <div className="notifications-container" />
          </Notifications>
        </div>
      </PageHeader>
      <JobStatus model={{...}}>
        <Section title="Status" panelClassName="pipeline-job-status-detail" titleSize="medium">
          <div className="g-section">
            <div className="panel panel-content pipeline-job-status-detail">
              <div className="panel-heading panel-content-flex panel-content-medium">
                <div className="panel-content-title-container ">
                  <div className="panel-content-title-medium ">
                    Status
                  </div>
                </div>
              </div>
              <div className="panel-body">
                <table>
                  <tbody>
                    <JobStatusRow label="Created" value="11:16 2021-01-08">
                      <tr className="pipeline-job-status-detail-row">
                        <td>
                          Created
                          : 
                        </td>
                        <td>
                          11:16 2021-01-08
                        </td>
                      </tr>
                    </JobStatusRow>
                    <JobStatusRow label="Status" value="COMPLETE">
                      <tr className="pipeline-job-status-detail-row">
                        <td>
                          Status
                          : 
                        </td>
                        <td>
                          COMPLETE
                        </td>
                      </tr>
                    </JobStatusRow>
                    <JobStatusRow label="Info" value={[undefined]}>
                      <tr className="pipeline-job-status-detail-row">
                        <td>
                          Info
                          : 
                        </td>
                        <td />
                      </tr>
                    </JobStatusRow>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </Section>
      </JobStatus>
      <LogFile model={{...}}>
        <Section title="Log" panelClassName="pipeline-job-status-log" titleSize="medium">
          <div className="g-section">
            <div className="panel panel-content pipeline-job-status-log">
              <div className="panel-heading panel-content-flex panel-content-medium">
                <div className="panel-content-title-container ">
                  <div className="panel-content-title-medium ">
                    Log
                  </div>
                </div>
              </div>
              <div className="panel-body">
                <table>
                  <tbody>
                    <LogEntry entry={{...}}>
                      <tr className="job-status-log-entry">
                        <td>
                          08 Jan 2021 11:16:11,328 INFO : ----- Start Batch Properties -----
                        </td>
                      </tr>
                    </LogEntry>
                    <LogEntry entry={{...}}>
                      <tr className="job-status-log-entry">
                        <td>
                          08 Jan 2021 11:16:11,330 INFO : ----- End Batch Properties -----
                        </td>
                      </tr>
                    </LogEntry>
                    <LogEntry entry={{...}}>
                      <tr className="job-status-log-entry">
                        <td>
                          08 Jan 2021 11:16:11,331 INFO : ----- Start Run Properties -----
                        </td>
                      </tr>
                    </LogEntry>
                    <LogEntry entry={{...}}>
                      <tr className="job-status-log-entry">
                        <td>
                          08 Jan 2021 11:16:11,331 INFO : 	Uploaded Files:
                        </td>
                      </tr>
                    </LogEntry>
                    <LogEntry entry={{...}}>
                      <tr className="job-status-log-entry">
                        <td>
                          08 Jan 2021 11:16:11,332 INFO : 		* data_2021-01-08_10-50-22-4.xlsx
                        </td>
                      </tr>
                    </LogEntry>
                    <LogEntry entry={{...}}>
                      <tr className="job-status-log-entry">
                        <td>
                          08 Jan 2021 11:16:11,332 INFO : 	Assay ID: [Blank]
                        </td>
                      </tr>
                    </LogEntry>
                    <LogEntry entry={{...}}>
                      <tr className="job-status-log-entry">
                        <td>
                          08 Jan 2021 11:16:11,332 INFO : 	Run Comments: [Blank]
                        </td>
                      </tr>
                    </LogEntry>
                    <LogEntry entry={{...}}>
                      <tr className="job-status-log-entry">
                        <td>
                          08 Jan 2021 11:16:11,333 INFO : 	dateField1: [Blank]
                        </td>
                      </tr>
                    </LogEntry>
                    <LogEntry entry={{...}}>
                      <tr className="job-status-log-entry">
                        <td>
                          08 Jan 2021 11:16:11,333 INFO : ----- End Run Properties -----
                        </td>
                      </tr>
                    </LogEntry>
                    <LogEntry entry={{...}}>
                      <tr className="job-status-log-entry">
                        <td>
                          08 Jan 2021 11:16:11,757 INFO : Starting assay upload
                        </td>
                      </tr>
                    </LogEntry>
                    <LogEntry entry={{...}}>
                      <tr className="job-status-log-entry">
                        <td>
                          08 Jan 2021 11:16:12,338 DEBUG: No ExperimentDataHandler registered for data file file:///Users/xing/dev/trunk/build/deploy/files/SM_Workflow_UpdateJob_Test/@files/assaydata/data_2021-01-08_10-50-22-4.log, no special loading will be done on this file.
                        </td>
                      </tr>
                    </LogEntry>
                    <LogEntry entry={{...}}>
                      <tr className="job-status-log-entry">
                        <td>
                          08 Jan 2021 11:16:12,727 INFO : Finished assay upload
                        </td>
                      </tr>
                    </LogEntry>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </Section>
      </LogFile>
    </div>
  </Page>
</PipelineStatusDetailPage>"
`;

exports[`<PipelineStatusDetailPage> Failed job, with error 1`] = `
"<PipelineStatusDetailPage fetchPipelineStatusDetail={[Function: fetch]} rowId={2} interval={2000}>
  <Page title="Status Detail" hasHeader={true} notFound={false}>
    <div className="app-page">
      <PageHeader title="SampleType_01 - SampleType_01_00.xlsx">
        <div className="page-header">
          <h2 className="no-margin-top">
            SampleType_01 - SampleType_01_00.xlsx
          </h2>
          <Notifications>
            <div className="notifications-container" />
          </Notifications>
        </div>
      </PageHeader>
      <JobStatus model={{...}}>
        <Section title="Status" panelClassName="pipeline-job-status-detail" titleSize="medium">
          <div className="g-section">
            <div className="panel panel-content pipeline-job-status-detail">
              <div className="panel-heading panel-content-flex panel-content-medium">
                <div className="panel-content-title-container ">
                  <div className="panel-content-title-medium ">
                    Status
                  </div>
                </div>
              </div>
              <div className="panel-body">
                <table>
                  <tbody>
                    <JobStatusRow label="Created" value="13:42 2021-01-13">
                      <tr className="pipeline-job-status-detail-row">
                        <td>
                          Created
                          : 
                        </td>
                        <td>
                          13:42 2021-01-13
                        </td>
                      </tr>
                    </JobStatusRow>
                    <JobStatusRow label="Status" value="ERROR">
                      <tr className="pipeline-job-status-detail-row">
                        <td>
                          Status
                          : 
                        </td>
                        <td>
                          ERROR
                        </td>
                      </tr>
                    </JobStatusRow>
                    <JobStatusRow label="Info" value={[undefined]}>
                      <tr className="pipeline-job-status-detail-row">
                        <td>
                          Info
                          : 
                        </td>
                        <td />
                      </tr>
                    </JobStatusRow>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </Section>
      </JobStatus>
      <LogFile model={{...}}>
        <Section title="Log" panelClassName="pipeline-job-status-log" titleSize="medium">
          <div className="g-section">
            <div className="panel panel-content pipeline-job-status-log">
              <div className="panel-heading panel-content-flex panel-content-medium">
                <div className="panel-content-title-container ">
                  <div className="panel-content-title-medium ">
                    Log
                  </div>
                </div>
              </div>
              <div className="panel-body">
                <table>
                  <tbody>
                    <LogEntry entry={{...}}>
                      <tr className="job-status-log-entry">
                        <td>
                          14 Jan 2021 09:31:23,636 INFO : Retrying job.
                        </td>
                      </tr>
                    </LogEntry>
                    <LogEntry entry={{...}}>
                      <tr className="job-status-log-entry">
                        <td>
                          14 Jan 2021 09:31:23,637 DEBUG: Database indicates active task ID is null
                        </td>
                      </tr>
                    </LogEntry>
                    <LogEntry entry={{...}}>
                      <tr className="job-status-log-entry">
                        <td>
                          14 Jan 2021 09:31:23,640 DEBUG: Retry details: Old Job ID: 85d9aaa5-3815-1039-9527-87771aa77304
                        </td>
                      </tr>
                    </LogEntry>
                    <LogEntry entry={{...}}>
                      <tr className="job-status-log-entry">
                        <td>
                          14 Jan 2021 09:31:23,652 INFO : Starting importing SampleType_01 - SampleType_01_00.xlsx
                        </td>
                      </tr>
                    </LogEntry>
                    <LogEntry entry={{...}}>
                      <tr className="job-status-log-entry job-status-log-entry-error">
                        <td>
                          14 Jan 2021 09:31:29,851 ERROR: Import failed: ERROR: duplicate key value violates unique constraint &quot;uq_material_lsid&quot;
                            Detail: Key (lsid)=(urn:lsid:labkey.com:Sample.8.SampleType_01:S1_1) already exists.
                            Where: SQL statement &quot;INSERT INTO exp.material (rowid, lsid, name, cpastype, created, container, createdby, modifiedby, modified, lastindexed, description, objectid)
                          SELECT $1.RowId, $1.lsid, $1.Name, &#39;urn:lsid:labkey.com:SampleSet.Folder-8:SampleType_01&#39;, CURRENT_TIMESTAMP, &#39;6e20520f-8c10-1038-8703-f26082cf2989&#39;, 1005, 1005, CURRENT_TIMESTAMP, $1.LastIndexed, $1.Description, _$objectid$_&quot;
                          PL/pgSQL function temp.fn_df328d95c900e606a17f6d5d8021e973(temp.fn_df328d95c900e606a17f6d5d8021e973type) line 9 at SQL statement
                        </td>
                      </tr>
                    </LogEntry>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </Section>
      </LogFile>
    </div>
  </Page>
</PipelineStatusDetailPage>"
`;

exports[`<PipelineStatusDetailPage> Running job, with warning 1`] = `
"<PipelineStatusDetailPage fetchPipelineStatusDetail={[Function: fetch]} rowId={3} interval={2000}>
  <Page title="Status Detail" hasHeader={true} notFound={false}>
    <div className="app-page">
      <PageHeader title="exp.data - sourceType1 - data_2021-01-10_06-02-08-2.xlsx">
        <div className="page-header">
          <h2 className="no-margin-top">
            exp.data - sourceType1 - data_2021-01-10_06-02-08-2.xlsx
          </h2>
          <Notifications>
            <div className="notifications-container" />
          </Notifications>
        </div>
      </PageHeader>
      <JobStatus model={{...}}>
        <Section title="Status" panelClassName="pipeline-job-status-detail" titleSize="medium">
          <div className="g-section">
            <div className="panel panel-content pipeline-job-status-detail">
              <div className="panel-heading panel-content-flex panel-content-medium">
                <div className="panel-content-title-container ">
                  <div className="panel-content-title-medium ">
                    Status
                  </div>
                </div>
              </div>
              <div className="panel-body">
                <table>
                  <tbody>
                    <JobStatusRow label="Created" value="07:17 2021-01-10">
                      <tr className="pipeline-job-status-detail-row">
                        <td>
                          Created
                          : 
                        </td>
                        <td>
                          07:17 2021-01-10
                        </td>
                      </tr>
                    </JobStatusRow>
                    <JobStatusRow label="Status" value="COMPLETE">
                      <tr className="pipeline-job-status-detail-row">
                        <td>
                          Status
                          : 
                        </td>
                        <td>
                          COMPLETE
                        </td>
                      </tr>
                    </JobStatusRow>
                    <JobStatusRow label="Info" value={[undefined]}>
                      <tr className="pipeline-job-status-detail-row">
                        <td>
                          Info
                          : 
                        </td>
                        <td />
                      </tr>
                    </JobStatusRow>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </Section>
      </JobStatus>
      <LogFile model={{...}}>
        <Section title="Log" panelClassName="pipeline-job-status-log" titleSize="medium">
          <div className="g-section">
            <div className="panel panel-content pipeline-job-status-log">
              <div className="panel-heading panel-content-flex panel-content-medium">
                <div className="panel-content-title-container ">
                  <div className="panel-content-title-medium ">
                    Log
                  </div>
                </div>
              </div>
              <div className="panel-body">
                <table>
                  <tbody>
                    <LogEntry entry={{...}}>
                      <tr className="job-status-log-entry">
                        <td>
                          10 Jan 2021 07:17:27,112 INFO : Starting importing exp.data - sourceType1 - data_2021-01-10_06-02-08-2.xlsx
                        </td>
                      </tr>
                    </LogEntry>
                    <LogEntry entry={{...}}>
                      <tr className="job-status-log-entry job-status-log-entry-warn">
                        <td>
                          10 Jan 2021 07:17:29,693 WARN : Parent source not found, skipping...
                        </td>
                      </tr>
                    </LogEntry>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </Section>
      </LogFile>
    </div>
  </Page>
</PipelineStatusDetailPage>"
`;
